# python-project-template

./: .flake8  README.md  pyproject.toml
.github/workflows/: check-format-and-lint.yaml  setup.yaml
tests/: test_example.py
